service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-reactjs-service
spec:
  selector:
    app: app-reactjs  # Debes ajustar esto según las etiquetas de tus pods
  ports:
    - protocol: TCP
      port: 3000         # Puerto del servicio dentro del clúster
      targetPort: 3000   # Puerto en el contenedor del microservicio
  # type: ClusterIP         # Accedido solo en el cluster
  type: NodePort
