api-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-app-reactjs
spec:
  ingressClassName: nginx  # Reemplaza "nginx" con el nombre de la clase de Ingress que deseas utilizar
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-reactjs-service
            port:
              number: 3000
